# WAV_Player

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: WAVPlayer.cpp  io_weichao_wav_1player_MainActivity.h
app/src/main/java/io/weichao/wav_player/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
test/: app-debug.apk
transcode-1.1.7/avilib/: platform.h
